--- a/htdocs/components/basicInformation/basicInformation.css
+++ b/htdocs/components/basicInformation/basicInformation.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: center;
   font-family: "Raleway";
-  font-size: 15px;
+  font-size: 18px;
 }
 .basicInformation__name {
   margin-top: 0;
@@ -21,6 +21,8 @@
   width: 100px;
   max-width: 100%;
   margin-bottom: var(--col-gap);
+  border-radius: 100%;
+  height: auto;
 }
 .basicInformation__buttons {
   display: flex;
@@ -103,12 +105,30 @@
 @media screen and (min-width: 768px) and (max-width: 959px) {
   .basicInformation .col-1 {
     width: 16.6666666667%;
+    text-align: end;
   }
   .basicInformation .col-3 {
     width: 33.3333333333%;
   }
   .basicInformation .col-4 {
     width: 41.6666666667%;
+  }
+}
+.basicInformation__bg {
+  background-image: url("/portfolio/uploads/2023/03/bg-002-1200.webp");
+  background-size: cover;
+  background-position: center;
+  filter: opacity(0.75) blur(2px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+@media (min-width: 768px) {
+  .basicInformation__bg {
+    filter: opacity(0.25) blur(2px);
   }
 }
 
