--- a/htdocs/components/projects/projects.css
+++ b/htdocs/components/projects/projects.css
@@ -8,27 +8,39 @@
   font-family: "Raleway";
   font-size: 15px;
 }
+@media screen and (min-width: 1130px) {
+  .projects__main {
+    justify-content: center;
+  }
+}
 .projects__main > .cols .cols.col-8 {
   justify-content: flex-start;
   flex-direction: column;
   gap: var(--col-gap);
   position: relative;
 }
-@media screen and (min-width: 768px) and (max-width: 959px) {
+@media screen and (min-width: 768px) and (max-width: 1129px) {
   .projects__main > .cols .cols.col-8 {
     width: 100%;
   }
 }
-.projects__main > .cols .cols.col-8::after {
-  content: "";
-  width: 2em;
-  height: 4px;
-  background: #015fb5;
-  position: absolute;
-  top: calc(7em - 2px);
-  left: 0;
+@media screen and (min-width: 1130px) {
+  .projects__main > .cols .cols.col-8 {
+    width: 1130px;
+  }
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 1148px) {
+  .projects__main > .cols .cols.col-8::after {
+    content: "";
+    width: 2em;
+    height: 4px;
+    background: #015fb5;
+    position: absolute;
+    top: 10em;
+    left: 0;
+  }
+}
+@media screen and (min-width: 1148px) and (min-width: 768px) {
   .projects__main > .cols .cols.col-8::after {
     left: 20px;
   }
@@ -37,12 +49,13 @@
   position: relative;
   overflow-x: scroll;
   width: 100%;
-  margin: var(--col-gap) 0;
+  margin: calc(var(--col-gap) * 3) 0 var(--col-gap) 0;
   mask-image: linear-gradient(to right, rgba(0, 0, 0, 0), #000 20px, #000 calc(100% - 20px), rgba(0, 0, 0, 0)), linear-gradient(#000, #000);
   mask-size: 100%, 0 100%;
   /* Webkit browsers */
   -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0), #000 20px, #000 calc(100% - 20px), rgba(0, 0, 0, 0)), linear-gradient(#000, #000);
   -webkit-mask-size: 100%, 0 100%;
+  /* Handle */
 }
 @media screen and (max-width: 767px) {
   .projects__main-title {
@@ -60,19 +73,32 @@
   padding: 1.5em 0;
   width: max-content;
 }
+.projects__main-title::-webkit-scrollbar {
+  background: #ebebeb;
+  height: 4px;
+  width: 4px;
+}
+.projects__main-title::-webkit-scrollbar-thumb {
+  background: #015fb5;
+}
 .projects__filter-category {
   margin-top: 1em;
-  font-size: 50px;
+  font-size: 44px;
   font-weight: 400;
   line-height: 45px;
   position: relative;
   margin-bottom: 1em;
   text-transform: capitalize;
-  color: #d9d9d9;
+  color: #898989;
   margin-left: var(--col-gap);
+  cursor: pointer;
+  transition: 0.25s;
 }
 .projects__filter-category:nth-child(1) {
   margin-left: 0;
+}
+.projects__filter-category:hover {
+  color: #015fb5;
 }
 .projects__filter-category.active {
   color: black;
@@ -85,10 +111,11 @@
 .projects__list {
   display: flex;
   flex-direction: column;
-  gap: var(--col-gap);
+  gap: calc(var(--col-gap) * 2);
 }
 .projects__item {
   height: fit-content;
+  animation: fadeInLeft ease-in-out 0.5s;
 }
 @media screen and (max-width: 767px) {
   .projects__item {
@@ -123,7 +150,7 @@
     margin: 4vw 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: end;
   }
 }
@@ -134,6 +161,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-blend-mode: multiply;
+  background-size: cover;
 }
 @media (min-width: 768px) {
   .projects__item--img {
@@ -148,10 +177,17 @@
   }
 }
 .projects__item--img img {
-  max-width: 95%;
-  margin-top: 5%;
-  rotate: -2deg;
+  max-width: 100%;
+  margin: 5% 0;
+  rotate: 2deg;
   transition: 0.35s;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.3137254902));
+}
+@media (min-width: 768px) {
+  .projects__item--img img {
+    max-width: 95%;
+    max-height: 550px;
+  }
 }
 .projects__item--img img:hover {
   scale: 1.05;
@@ -170,7 +206,7 @@
 }
 .projects__item--tagline {
   font-size: 0.9em;
-  opacity: 0.6;
+  color: #525252;
   text-transform: capitalize;
   margin-bottom: var(--col-gap);
 }
@@ -192,6 +228,9 @@
   }
 }
 @media (min-width: 768px) {
+  .projects__item:nth-child(odd) .projects__item--title {
+    text-align: right;
+  }
   .projects__item:nth-child(even) {
     flex-direction: row-reverse;
   }
@@ -203,8 +242,38 @@
     z-index: 1;
     align-items: start;
   }
+  .projects__item:nth-child(even) .projects__item--img img {
+    rotate: -2deg;
+  }
   .projects__item:nth-child(even) .projects__item--tags {
     text-align: left;
+  }
+}
+.projects__item.fade-left {
+  animation: fadeOutLeft ease-in-out 0.5s;
+}
+.projects__item a.btn {
+  display: block;
+  margin-top: var(--col-gap);
+}
+
+/* -- Animations -- */
+@keyframes fadeOutLeft {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-15px);
+  }
+}
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(15px);
+  }
+  100% {
+    opacity: 1;
   }
 }
 
