PF - Uploads folder improved & uploads images moved to theur component or project direcoties & img url links fixings

--- a/htdocs/common/style.css
+++ b/htdocs/common/style.css
@@ -200,6 +200,10 @@ main {
   animation: fadeHoverBtnIconLeft ease-in-out 0.5s;
 }
 
+span.strong {
+  font-weight: bold;
+}
+
 .icon::before {
   content: "";
   height: 0.85em;
