--- a/htdocs/components/projects/projects.css
+++ b/htdocs/components/projects/projects.css
@@ -178,10 +178,11 @@
 }
 .projects__item--img img {
   max-width: 100%;
-  margin: 5% 0;
+  margin: 1% 0;
   rotate: 2deg;
   transition: 0.35s;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.3137254902));
+  height: auto;
 }
 @media (min-width: 768px) {
   .projects__item--img img {
