--- a/htdocs/components/projects/projects.scss
+++ b/htdocs/components/projects/projects.scss
@@ -186,10 +186,11 @@
 
             img {
                 max-width: 100%;
-                margin: 5% 0;
+                margin: 1% 0;
                 rotate: 2deg;
                 transition: 0.35s;
                 filter: drop-shadow(0px 2px 2px #00000050);
+                height: auto;
 
                 @include breakpoint($bp-tablet-min) {
                     max-width: 95%;
