--- a/htdocs/components/projects/projects.css
+++ b/htdocs/components/projects/projects.css
@@ -7,6 +7,7 @@
   display: flex;
   font-family: "Raleway";
   font-size: 15px;
+  padding-bottom: 100px;
 }
 @media screen and (min-width: 1130px) {
   .projects__main {
