--- a/htdocs/components/projects/projects.scss
+++ b/htdocs/components/projects/projects.scss
@@ -10,6 +10,7 @@
         display: flex;
         font-family: "Raleway";
         font-size: 15px;
+        padding-bottom: 100px;
 
         @media screen and (min-width: 1130px) {
             justify-content: center;
