PF - Added otherWorks content in EN + lang cookie created + otherWorks animations and styling

--- a/htdocs/components/otherWorks/otherWorks.css
+++ b/htdocs/components/otherWorks/otherWorks.css
@@ -9,12 +9,12 @@
   background-blend-mode: multiply;
 }
 .otherWorks__main {
-  padding: 100px 15px;
+  padding: 15px;
   max-width: calc(100% - 30px);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: calc(100vh - 6vw - 200px);
+  min-height: calc(100vh - 6vw - 30px);
   font-family: "Raleway";
   font-size: 15px;
 }
@@ -30,12 +30,16 @@
   line-height: 45px;
   position: relative;
   margin-bottom: 1em;
-  text-transform: capitalize;
   color: white;
   cursor: pointer;
   transition: 0.25s;
   position: relative;
-  margin-bottom: 150px;
+  margin-bottom: 70px;
+}
+@media (min-width: 960px) {
+  .otherWorks__main-title {
+    margin-bottom: 150px;
+  }
 }
 .otherWorks__main-title::after {
   content: "";
@@ -50,10 +54,41 @@
   text-align: center;
 }
 .otherWorks__list img {
-  border: 1px solid white;
   width: 50px;
   height: 50px;
-  border-radius: 100%;
+}
+.otherWorks__list .heart {
+  filter: drop-shadow(0px 6px 4px rgba(0, 0, 0, 0.1450980392));
+}
+.otherWorks__list .heart__3d-modelling {
+  transform-origin: bottom center;
+  animation: tdrotate linear 7s infinite;
+}
+.otherWorks__list .heart__animation-video {
+  transform-origin: bottom center;
+  animation: pendule ease-in-out 5s infinite;
+}
+.otherWorks__list .heart__motion-graphics {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  animation: zigzag ease-in-out 3s infinite;
+}
+.otherWorks__list .heart__motion-graphics.heart-doubled {
+  transform: translate(-50%, -50%);
+  mix-blend-mode: lighten;
+  z-index: 2;
+  animation: zagzig ease-in-out 3s infinite;
+}
+.otherWorks__list .heart__motion-graphics.heart-doubled.heart-back {
+  z-index: 0;
+  mix-blend-mode: normal;
+}
+.otherWorks__list .animation__motion-graphics {
+  position: relative;
+  height: 50px;
 }
 .otherWorks__list h4 {
   color: white;
@@ -72,7 +107,9 @@
   display: flex;
   flex-direction: column;
   gap: var(--col-gap);
-  margin-bottom: 40px;
+  margin: auto;
+  margin-bottom: 80px;
+  max-width: 350px;
 }
 @media (min-width: 768px) {
   .otherWorks__list--items {
@@ -83,18 +120,23 @@
   display: flex;
   flex-direction: row;
   gap: var(--col-gap);
-  align-items: flex-start;
   text-align: start;
+  align-items: center;
 }
 @media screen and (max-width: 767px) {
   .otherWorks__list--item:nth-child(even) {
     flex-direction: row-reverse;
+    text-align: end;
+  }
+}
+@media (min-width: 768px) {
+  .otherWorks__list--item {
+    align-items: flex-start;
   }
 }
 .otherWorks__list--item--image {
   min-width: 60px;
   min-height: 60px;
-  background-color: white;
 }
 .otherWorks__list--item--content {
   color: white;
@@ -105,6 +147,71 @@
 }
 .otherWorks__list--item--description {
   font-size: 14px;
+  margin-top: 0.25em;
+}
+
+/* Animations */
+@keyframes tdrotate {
+  0% {
+    transform: rotateY(0deg) rotateX(0deg);
+  }
+  24% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.45;
+  }
+  50% {
+    transform: rotateY(180deg) rotateX(30deg);
+  }
+  75% {
+    opacity: 0.65;
+  }
+  76% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotateY(360deg) rotateX(0deg);
+  }
+}
+@keyframes pendule {
+  0% {
+    transform: rotateZ(-25deg);
+  }
+  50% {
+    transform: rotateZ(25deg);
+  }
+  100% {
+    transform: rotateZ(-25deg);
+  }
+}
+@keyframes zigzag {
+  0% {
+    transform: translate(-50%, -50%);
+    filter: blur(0);
+  }
+  50% {
+    transform: translate(-65%, -35%);
+    filter: blur(2px);
+  }
+  100% {
+    filter: blur(0);
+    transform: translate(-50%, -50%);
+  }
+}
+@keyframes zagzig {
+  0% {
+    transform: translate(-50%, -50%);
+    filter: blur(0);
+  }
+  50% {
+    transform: translate(-45%, -55%);
+    filter: blur(2px);
+  }
+  100% {
+    filter: blur(0);
+    transform: translate(-50%, -50%);
+  }
 }
 
 /*# sourceMappingURL=otherWorks.css.map */
