--- a/htdocs/components/basicInformation/basicInformation.scss
+++ b/htdocs/components/basicInformation/basicInformation.scss
@@ -1,4 +1,6 @@
-/* Utils */
+/* ========== BASICINFORMATION STYLES ========== */
+
+// Utils
 @import '../../common/utils/colors';
 @import '../../common/utils/breakpoints';
 
