--- a/htdocs/components/brief/brief.scss
+++ b/htdocs/components/brief/brief.scss
@@ -1,9 +1,11 @@
-/* Utils */
+/* ========== BRIEF STYLES ========== */
+
+// Utils
 @import '../../common/utils/colors';
 @import '../../common/utils/breakpoints';
 
-/* Variables */
-/* --- Sizes */
+// Variables
+// Sizes
 $sunSize: 20vh;
 
 .brief {
