--- a/htdocs/components/otherWorks/otherWorks.scss
+++ b/htdocs/components/otherWorks/otherWorks.scss
@@ -1,4 +1,6 @@
-/* Utils */
+/* ========== OTHERWORKS STYLES ========== */
+
+// Utils
 @import '../../common/utils/colors';
 @import '../../common/utils/breakpoints';
 
@@ -172,7 +174,7 @@ $uri: '/portfolio';
     }
 }
 
-/* Animations */
+/* -- Animations -- */
 
 @keyframes tdrotate {
     0% {
