--- a/htdocs/components/projects/projects.scss
+++ b/htdocs/components/projects/projects.scss
@@ -1,4 +1,6 @@
-/* Utils */
+/* ========== PROJECTS STYLES ========== */
+
+// Utils
 @import '../../common/utils/colors';
 @import '../../common/utils/breakpoints';
 
