--- a/htdocs/components/otherWorks/otherWorks.scss
+++ b/htdocs/components/otherWorks/otherWorks.scss
@@ -140,6 +140,7 @@ $uri: '/portfolio';
             gap: var(--col-gap);
             text-align: start;
             align-items: center;
+            text-decoration: none;
 
             @media screen and (max-width: $bp-mobile-max) {
                 &:nth-child(even) {
@@ -150,16 +151,38 @@ $uri: '/portfolio';
 
             @include breakpoint($bp-tablet-min) {
                 align-items: flex-start;
+                opacity: .85;
+                transition: .25s all;
+                cursor: pointer;
+
+                &:hover {
+                    opacity: 1;
+
+                    .otherWorks__list--item--image {
+                        transition: .5s all;
+                        filter: opacity(1);
+                        background-blend-mode: unset;
+                    }
+                }
             }
 
             &--image {
                 min-width: 60px;
                 min-height: 60px;
+                background-size: cover;
+
+                @include breakpoint($bp-tablet-min) {
+                    background-color: #0b65b8;
+                    background-blend-mode: luminosity;
+                    filter: opacity(0.75);
+                }
             }
 
             &--content {
                 color: white;
                 line-height: 1.25em;
+                display: flex;
+                flex-direction: column;
             }
 
             &--title {
