--- a/htdocs/components/contact/contact.scss
+++ b/htdocs/components/contact/contact.scss
@@ -1,10 +1,9 @@
 /* ========== CONTACT STYLES ========== */
 
 // Utils
+@import '../../common/utils/variables';
 @import '../../common/utils/colors';
 @import '../../common/utils/breakpoints';
-
-$uri: '/portfolio';
 
 .contact {
     position: relative;
