--- a/htdocs/components/otherWorks/otherWorks.scss
+++ b/htdocs/components/otherWorks/otherWorks.scss
@@ -1,10 +1,9 @@
 /* ========== OTHERWORKS STYLES ========== */
 
 // Utils
+@import '../../common/utils/variables';
 @import '../../common/utils/colors';
 @import '../../common/utils/breakpoints';
-
-$uri: '/portfolio';
 
 .otherWorks {
     background-color: #0c66b9;
