--- a/htdocs/common/style.css
+++ b/htdocs/common/style.css
@@ -1,4 +1,4 @@
-/* Utils */
+/* Utils */ /* Uri of the project */
 /* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Raleway:wght@400;600&display=swap");
 :root {
@@ -221,22 +221,22 @@ span.strong {
   transform: translateY(1px);
 }
 .icon__linkedin::before {
-  background-image: url(/portfolio/uploads/icons/icon_linkedin.svg);
+  background-image: url(/lab/portfolio/uploads/icons/icon_linkedin.svg);
 }
 .icon__resumee::before {
-  background-image: url(/portfolio/uploads/icons/icon_document.svg);
+  background-image: url(/lab/portfolio/uploads/icons/icon_document.svg);
 }
 .icon__graduate::before {
-  background-image: url(/portfolio/uploads/icons/icon_graduate.svg);
+  background-image: url(/lab/portfolio/uploads/icons/icon_graduate.svg);
 }
 .icon__master::before {
-  background-image: url(/portfolio/uploads/icons/icon_master.svg);
+  background-image: url(/lab/portfolio/uploads/icons/icon_master.svg);
 }
 .icon__link--external::before {
-  background-image: url(/portfolio/uploads/icons/icon_link-external.svg);
+  background-image: url(/lab/portfolio/uploads/icons/icon_link-external.svg);
 }
 .icon__greet::before {
-  background-image: url(/portfolio/uploads/icons/icon_greet.svg);
+  background-image: url(/lab/portfolio/uploads/icons/icon_greet.svg);
   width: 1.2em;
 }
 
