--- a/htdocs/components/otherWorks/otherWorks.scss
+++ b/htdocs/components/otherWorks/otherWorks.scss
@@ -1,9 +1,10 @@
 /* ========== OTHERWORKS STYLES ========== */
 
 // Utils
-@import '../../common/utils/variables';
 @import '../../common/utils/colors';
 @import '../../common/utils/breakpoints';
+
+$uri: '/portfolio';
 
 .otherWorks {
     background-color: #0c66b9;
@@ -139,7 +140,6 @@
             gap: var(--col-gap);
             text-align: start;
             align-items: center;
-            text-decoration: none;
 
             @media screen and (max-width: $bp-mobile-max) {
                 &:nth-child(even) {
@@ -150,38 +150,16 @@
 
             @include breakpoint($bp-tablet-min) {
                 align-items: flex-start;
-                opacity: .85;
-                transition: .25s all;
-                cursor: pointer;
-
-                &:hover {
-                    opacity: 1;
-
-                    .otherWorks__list--item--image {
-                        transition: .5s all;
-                        filter: opacity(1);
-                        background-blend-mode: unset;
-                    }
-                }
             }
 
             &--image {
                 min-width: 60px;
                 min-height: 60px;
-                background-size: cover;
-
-                @include breakpoint($bp-tablet-min) {
-                    background-color: #0b65b8;
-                    background-blend-mode: luminosity;
-                    filter: opacity(0.75);
-                }
             }
 
             &--content {
                 color: white;
                 line-height: 1.25em;
-                display: flex;
-                flex-direction: column;
             }
 
             &--title {
